RendeerAlpha/include/RendeerC.h

RDA_C_API int rda_abi_major(void);
RDA_C_API int rda_abi_minor(void);
typedef struct rda_config rda_config;
// `user` is whatever was handed to the function that registered this. The engine never
// looks inside it.
typedef void (*rda_callback)(void* user);
typedef void (*rda_update_callback)(float dt_seconds, void* user);
// ---- what went wrong -------------------------------------------------------------
// The message from the last call that returned 0, or "" if none has. Owned by the
// engine and valid until the next failing call on the same thread.
RDA_C_API const char* rda_last_error(void);
// ---- configuration ---------------------------------------------------------------
// A handle rather than a struct, so adding a field to AppConfig does not change this
// file's ABI and every caller does not have to be rebuilt.
RDA_C_API rda_config* rda_config_new(void);
RDA_C_API void rda_config_free(rda_config* config);
RDA_C_API void rda_config_set_name(rda_config* config, const char* name);
// The compiled theme (.rdth). Empty or unset leaves the engine's built-in look.
RDA_C_API void rda_config_set_theme(rda_config* config, const char* path);
// Syntax languages beyond the built-in "python" (res/themes/languages.xml).
RDA_C_API void rda_config_set_languages(rda_config* config, const char* path);
RDA_C_API void rda_config_set_vsync(rda_config* config, int on);
// The font the interface is drawn in, and the pixel height its body text is baked at.
// A path of NULL or "" keeps the engine's own; a height of 0 keeps the default. The
// other sizes a theme asks for are baked alongside it, so this is one number rather
// than a list.
RDA_C_API void rda_config_set_font(rda_config* config, const char* path, float height);
// Once, after the window and renderer are up. This is where an interface is loaded.
RDA_C_API void rda_config_on_start(rda_config* config, rda_callback fn, void* user);
// Once per frame, before it is drawn.
RDA_C_API void rda_config_on_update(rda_config* config, rda_update_callback fn, void* user);
// Once, after the loop ends and before teardown.
RDA_C_API void rda_config_on_shutdown(rda_config* config, rda_callback fn, void* user);
// ---- lifecycle -------------------------------------------------------------------
// Starts the engine on a thread of its own and returns once it is up -- meaning the
// window, the renderer and the on_start callback have all finished. So the line after
// this one may write state and expect it to exist, which is the only contract worth
// having: the alternative is every backend hand-rolling the same handshake, and getting
// it wrong once each.
//
// Returns 0 if the engine failed to start, or if on_start stopped it. The config may be
// freed afterwards. Calling this twice without a rda_wait() in between fails.
RDA_C_API int rda_init(rda_config* config);
// Whether the loop is still going. False after every window has closed.
RDA_C_API int rda_running(void);
// Asks the loop to end. Safe from any thread, and safe before rda_init().
RDA_C_API void rda_stop(void);
// Blocks until the loop thread has ended and been joined.
RDA_C_API void rda_wait(void);
// ---- the interface ---------------------------------------------------------------
// Loads a compiled layout (.rdab) as the interface, replacing whatever was showing.
// `source_path` may be empty; where a build can compile, it is the .tsx to watch.
RDA_C_API int rda_load_interface(const char* blueprint_path, const char* source_path);
// ---- screens ---------------------------------------------------------------------
// The other way to show an interface: several layouts, one showing at a time, with the
// name of that one held in a signal called `route`. Navigating is then an ordinary
// write -- rda_signal_set_text(route, "catalogue") -- because "which screen is showing"
// is state, and this engine has one answer for state.
//
// Opening routes replaces anything rda_load_interface put up, and vice versa: they are
// two ways to answer the same question and only one of them can be right at a time.
//
// The four arrays are parallel and `count` long. `params[i]` names the signals that are
// screen i's arguments, comma-separated ("productId,page"), or NULL for none; going back
// restores them along with the route, which is the whole reason they are named. Passed
// as one call rather than built up over several, because each call is a hop to the loop
// thread and a route table is known all at once.
//
// `layout_dir` is where the blueprints are (`<layout>.rdab`); `source_dir` may be empty,
// and where a build can compile it is where their .tsx are, for reloading on a change.
RDA_C_API int rda_open_routes(const char* const* names, const char* const* layouts,
                              const char* const* params, int count,
                              const char* layout_dir, const char* source_dir);
// How long one screen takes to cross-fade into the next, in milliseconds. Both trees
// exist for the length of it, so zero -- an instant swap -- is the default.
//
// Safe from any thread and before rda_init(): the value is held here and applied by the
// loop, rather than written into the router from whichever thread asked.
RDA_C_API void rda_set_transition_ms(float ms);
// History. The declaration that names routes also declares `back` and `forward` as
// commands, and the router binds them itself, so a layout gets a working back button
// without anybody writing one. These are the same thing from outside the interface.
RDA_C_API int rda_route_back(void);
RDA_C_API int rda_route_forward(void);
// Whether there is anywhere to go. 1 yes, 0 no.
RDA_C_API int rda_route_can_go_back(void);
RDA_C_API int rda_route_can_go_forward(void);
// ---- declaring what the interface reads -------------------------------------------
// A layout is compiled against a state declaration, and the signals it names have to
// exist before it loads. In C++ the generated `State::define()` does this; in another
// language its generated equivalent calls these.
//
// Defining an existing name returns the same id rather than a second signal, so calling
// define twice is harmless. Redeclaring one with a different type is refused.
RDA_C_API uint32_t rda_define_number(const char* name, double value);
RDA_C_API uint32_t rda_define_bool(const char* name, int value);
RDA_C_API uint32_t rda_define_text(const char* name, const char* value);
RDA_C_API int rda_define_command(const char* name);
RDA_C_API int rda_define_table(const char* name);
// `type` is 0 number, 1 bool, 2 text -- the same order as rda_signal_type reports.
RDA_C_API int rda_define_column(const char* table, const char* column, int type);