bindings/csharp/Engine.cs

// Finding the engine, and the calls that reach it.
//
// Everything here is P/Invoke against the C ABI in `RendeerC.h`. Nothing to install and
// nothing to build beyond the project itself: the engine is a shared library and this is
// a description of it.
//
// Nothing here is public API. `Rda.cs` is the API; a generated state file calls the
// accessors below by name.
//
// ---- the two things P/Invoke gets wrong by default ----
//
// **Strings are UTF-8 on this ABI, and a bare `string` parameter is not.** The default
// marshalling is ANSI, so anything outside plain ASCII is destroyed on the way in --
// silently, and only for the inputs an English test never uses. Every string going out
// carries [MarshalAs(UnmanagedType.LPUTF8Str)]; every string coming back is read as bytes
// and decoded here. Measured both ways before this file was written.
//
// **A delegate handed to native code must outlive the call that registered it.** The
// garbage collector cannot see that the engine is holding the function pointer, so a
// trampoline that goes out of scope is collected and the next click calls into freed
// memory. Every one is kept in `Alive` for the life of the process.

using System;
using System.Collections.Generic;
using System.IO;
using System.Runtime.InteropServices;
using System.Text;

namespace Rendeer {

	/// <summary>Something the engine refused. The message is the engine's own.</summary>
	public class RdaException : Exception {
		/// <summary>Wraps the engine's own explanation of what it refused.</summary>
		public RdaException(string message) : base(message) { }
	}

	/// <summary>
	/// The seam a generated state file calls. Public because that file compiles into the
	/// application's assembly, not this one -- but it is not the API. See <see cref="Rda"/>.
	/// </summary>
	public static class Engine {
		internal const string Library = "rendeer_c";

		/// <summary>
		/// The revision of RendeerC.h this binding was written against. The engine says
		/// what it offers and how far back it still goes; both have to contain this
		/// number. Checked because the two are built separately: the .csproj copies a
		/// shared library that a different version of the checkout may have produced.
		/// </summary>
		// The RendeerC.h this binding was written against. The major has to match the
		// engine's exactly and the engine's minor has to be at least this one -- the
		// contract is in RendeerC.h.
		internal const int AbiMajor = 1;
		internal const int AbiMinor = 1;
		internal const uint NoSignal = 0xFFFFFFFFu;
		internal const uint NoTable = 0xFFFFFFFFu;

		// Cdecl explicitly. On x64 there is only one convention and it makes no
		// difference; on x86 the default is StdCall and this ABI is not, which is a
		// stack corruption rather than an error message.
		private const CallingConvention Cdecl = CallingConvention.Cdecl;

		internal delegate void Callback(IntPtr user);
		internal delegate void UpdateCallback(float dt, IntPtr user);

		// See the header comment. Never emptied.
		private static readonly List<object> Alive = new List<object>();

		// Where the engine is. .NET looks beside the assembly and then along the system
		// path, which is right for a shipped application and wrong for a developer
		// whose engine is in the checkout's bin/. RDA_ENGINE -- the file, or the folder
		// holding it -- is looked at first, the same escape hatch the Python and Node
		// bindings have. Anything else falls through to the default search.
		static Engine() {
			NativeLibrary.SetDllImportResolver(typeof(Engine).Assembly, (name, assembly, path) => {
				if (name != Library) return IntPtr.Zero;
				string? fromEnv = Environment.GetEnvironmentVariable("RDA_ENGINE");
				if (string.IsNullOrEmpty(fromEnv)) return IntPtr.Zero;
				string candidate = Directory.Exists(fromEnv) ? Path.Combine(fromEnv, FileName) : fromEnv;
				if (File.Exists(candidate) && NativeLibrary.TryLoad(candidate, out IntPtr handle)) return handle;
				return IntPtr.Zero;
			});
		}

		private static string FileName =>
			OperatingSystem.IsWindows() ? "rendeer_c.dll"
			: OperatingSystem.IsMacOS() ? "librendeer_c.dylib"
			: "librendeer_c.so";

		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_abi_major();

		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_abi_minor();

		/// <summary>
		/// Refuses an engine this binding cannot talk to. Called before anything else
		/// reaches the library, so a mismatch is one sentence rather than a missing
		/// entry point somewhere further in.
		/// </summary>
		internal static void CheckAbi() {
			string wanted = AbiMajor + "." + AbiMinor;
			int major, minor;
			try {
				major = rda_abi_major();
				minor = rda_abi_minor();
			} catch (EntryPointNotFoundException) {
				throw new RdaException(
					$"this engine predates the ABI version check, so it is older than this " +
					$"binding (which needs {wanted}). Rebuild the engine: " +
					$"scripts/windows-bringup.bat or scripts/linux-bringup.sh in the checkout.");
			}

			string found = major + "." + minor;
			if (major != AbiMajor) {
				// A different major in either direction: the engine has either removed
				// something this binding calls or never had it. Which way it went decides
				// which half moves.
				string which = major < AbiMajor
					? "The engine is behind the binding: rebuild it, or use the binding from the same checkout"
					: "The binding is behind the engine: build against the bindings/csharp in this checkout";
				throw new RdaException(
					$"the engine speaks ABI {found} and this binding speaks {wanted}. A " +
					$"different major number is a different ABI, not an older one, so nothing " +
					$"here will work. {which}.");
			}
			if (minor < AbiMinor) {
				throw new RdaException(
					$"the engine offers ABI {found} and this binding needs {wanted}. Same " +
					$"major, so nothing was removed -- the engine is simply missing what was " +
					$"added since: rebuild it, or use the binding from the same checkout.");
			}
		}

		// ---- what went wrong ----
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern IntPtr rda_last_error();

		internal static string LastError() {
			IntPtr text = rda_last_error();
			return text == IntPtr.Zero ? "" : Marshal.PtrToStringUTF8(text) ?? "";
		}

		internal static void Fail(string what) {
			string message = LastError();
			throw new RdaException(message.Length > 0 ? what + ": " + message : what);
		}

		// ---- configuration ----
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern IntPtr rda_config_new();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_free(IntPtr config);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_set_name(IntPtr config,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_set_theme(IntPtr config,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string path);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_set_languages(IntPtr config,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string path);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_set_vsync(IntPtr config, int on);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_set_font(IntPtr config,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string path, float height);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_on_start(IntPtr config, Callback fn, IntPtr user);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_on_update(IntPtr config, UpdateCallback fn, IntPtr user);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_config_on_shutdown(IntPtr config, Callback fn, IntPtr user);

		// ---- lifecycle ----
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_init(IntPtr config);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_running();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_stop();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_wait();

		// ---- the interface ----
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_load_interface(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string blueprint,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string source);

		// An array of UTF-8 strings, which the marshaller will not do on its own -- the
		// pointers are built by hand in Rda.OpenRoutes and freed there.
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_open_routes(IntPtr[] names, IntPtr[] layouts,
			IntPtr[] parameters, int count,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string layoutDir,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string sourceDir);

		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern void rda_set_transition_ms(float ms);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_route_back();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_route_forward();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_route_can_go_back();
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_route_can_go_forward();

		// ---- declaring ----
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern uint rda_define_number(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name, double value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern uint rda_define_bool(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name, int value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern uint rda_define_text(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_define_command(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_define_table(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_define_column(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string table,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string column, int type);

		/// <summary>Declares a number signal with its initial value.</summary>
		public static void DefineNumber(string name, double value) => rda_define_number(name, value);
		/// <summary>Declares a boolean signal with its initial value.</summary>
		public static void DefineBool(string name, bool value) => rda_define_bool(name, value ? 1 : 0);
		/// <summary>Declares a text signal with its initial value.</summary>
		public static void DefineText(string name, string value) => rda_define_text(name, value);

		/// <summary>Declares a command the interface may ask for.</summary>
		public static void DefineCommand(string name) {
			if (rda_define_command(name) == 0) Fail("cannot define the command '" + name + "'");
		}
		/// <summary>Declares a table a &lt;list&gt; can show.</summary>
		public static void DefineTable(string name) {
			if (rda_define_table(name) == 0) Fail("cannot define the table '" + name + "'");
		}
		/// <summary>Declares one column of a table. 0 number, 1 bool, 2 text.</summary>
		public static void DefineColumn(string table, string column, int type) {
			if (rda_define_column(table, column, type) == 0)
				Fail("cannot define " + table + "." + column);
		}
